--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,16 @@
     <!-- To use a fully qualified net address replace by : -->
     <!-- <script src="http://your.ip.adress.here:3700/socket.io/socket.io.js"></script> -->
 
-    <script src="http://192.168.0.10:3700/socket.io/socket.io.js"></script>
+    <script src="http://192.168.2.3:3700/socket.io/socket.io.js"></script>
 
     <script>
-        var socket = io.connect('http://127.0.0.1:3700');
+
+        /* IP and port */
+        var ADDR = '192.168.2.3';
+        var PORT = '3700';
+
+
+        var socket = io.connect('http://'+ADDR+':'+PORT+'/map');
 
         // To use a fully qualified net address replace by :
         // var socket = io.connect('http://your.ip.adress.here:3700');
