Add private messaging between users

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <!-- To use a fully qualified net address replace by : -->
     <!-- <script src="http://your.ip.adress.here:3700/socket.io/socket.io.js"></script> -->
 
-    <script src="http://192.168.2.3:3700/socket.io/socket.io.js"></script>
+    <script src="http://localhost:3700/socket.io/socket.io.js"></script>
 
     <script>
 
         /* IP and port */
-        var ADDR = '192.168.2.3';
+        var ADDR = 'localhost';
         var PORT = '3700';
 
 
